Fixed a couple of edge case styling and layout issues I noticed while testing the inline target

--- a/src/devtools/views/Components/SearchInput.css
+++ b/src/devtools/views/Components/SearchInput.css
@@ -1,11 +1,12 @@
 .SearchInput {
-  flex: 1;
+  flex: 1 1;
   display: flex;
   align-items: center;
 }
 
 .Input {
-  flex: 1;
+  flex: 1 1 100px;
+  width: 100px;
   font-size: var(--font-size-sans-large);
   outline: none;
   border: none;
@@ -24,6 +25,7 @@
 .IndexLabel {
   color: var(--color-dim);
   font-size: var(--font-size-sans-normal);
+  white-space: pre;
 }
 
 .LeftVRule,
